--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ android {
 }
 
 dependencies {
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0-rc01")
     implementation 'com.squareup.picasso:picasso:2.8'
     implementation "com.squareup.retrofit2:converter-moshi:2.4.0"
     implementation("com.squareup.moshi:moshi-kotlin:1.13.0")
