--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,22 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id'kotlin-android'
+    id 'kotlin-kapt'
 
 }
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-kapt'
+//Epoxy
+kapt {
+    correctErrorTypes = true
+}
 
 android {
     compileSdk 32
     buildFeatures {
         dataBinding true
+    }
+    buildFeatures {
+        viewBinding true
     }
 
     defaultConfig {
@@ -39,6 +46,9 @@ android {
 }
 
 dependencies {
+    implementation "com.airbnb.android:epoxy:4.4.1"
+    // Add the annotation processor if you are using Epoxy's annotations (recommended)
+   kapt ("com.airbnb.android:epoxy-processor:4.4.1")
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0-rc01")
     implementation 'com.squareup.picasso:picasso:2.8'
     implementation "com.squareup.retrofit2:converter-moshi:2.4.0"
