--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ android {
 }
 
 dependencies {
+    def paging_version = "3.1.1"
+    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
     implementation "com.airbnb.android:epoxy:4.4.1"
     // Add the annotation processor if you are using Epoxy's annotations (recommended)
    kapt ("com.airbnb.android:epoxy-processor:4.4.1")
